--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,8 @@
      --color-brownblue: #1d4355;
      --color-brown: #2f31247e;
  }
- 
+ @import url(//db.onlinewebfonts.com/c/1333b13c4f911f3160f1c2822573f70c?family=Poor+Richard);
+
  div[id],
  h1[id] {
      scroll-margin-top: 110px;
