--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,11 @@
-         * {
+        
+            * {
              box-sizing: border-box;
              -webkit-box-sizing: border-box;
              -moz-box-sizing: border-box;
              -o-box-sizing: border-box;
              margin: 0;
-             font-family: "Poor Richard";
+             font-family: "Poor Richard", sans-serif;
          }
          
           :root {
@@ -17,6 +18,62 @@
              --color7: rgba(0, 27, 43, 0.822);
              --color-brownblue: #1d4355;
              --color-brown: #2f31247e;
+         }
+         
+         #loading {
+             width: 100vw;
+             height: 110vh;
+             position: fixed;
+             top: -10px;
+             background: var(--color7);
+             z-index: 100000;
+             align-items: center;
+             justify-content: center;
+             display: flex;
+             backdrop-filter: blur(5px);
+             transition: 0.3s;
+         }
+         
+         #progress {
+             width: 0;
+             height: 20px;
+             background: var(--color1);
+             position: absolute;
+             top: 0px;
+             transition: 0.3s;
+             border-radius: 5px;
+             margin: 0px;
+         }
+         
+         .sub-load {
+             display: flex;
+             animation: scale 1s alternate infinite;
+             align-items: center;
+             justify-content: center;
+             flex-direction: column;
+             color: rgb(255, 255, 255);
+         }
+         
+         @keyframes scale {
+             from {
+                 transform: scale(1.05);
+                 opacity: 1;
+             }
+             to {
+                 opacity: 0;
+                 transform: scale(1);
+             }
+         }
+         
+         @keyframes scalemax {
+             from {
+                 transform: scale(1);
+                 opacity: 1;
+             }
+             to {
+                 opacity: 0;
+                 transform: scale(50);
+             }
          }
          
          @font-face {
@@ -114,8 +171,12 @@
          }
          
          .a-sp:hover {
-             background: var(--color2);
-             color: white;
+             border-bottom: 5px solid var(--color2);
+             transition: 0.3s;
+         }
+         
+         .a-sp:visited {
+             border-bottom: 5px solid var(--color2);
              transition: 0.3s;
          }
          
@@ -124,9 +185,10 @@
              color: var(--color-brownblue);
              display: inline-block;
              padding: 10px;
-             border-radius: 5px;
              transition: 0.3s;
              margin: 0px 5px;
+             transition: 0.3s;
+             border-bottom: 12px solid transparent;
          }
          
          .ban {
@@ -222,13 +284,39 @@
              font-size: 20px;
          }
          
+         #btn_m {
+             transform: scale(1.3);
+         }
+         
          .title-5::before {
              content: "";
              width: 100px;
              height: 5px;
              display: block;
              margin: auto;
-             border-bottom: 1px solid white;
+             border-bottom: 1px solid rgb(255, 255, 255);
+             transition: 0.3s;
+         }
+         
+         .title-5:hover::before {
+             content: "";
+             width: 0px;
+             height: 0px;
+             margin: auto;
+             transform: rotate(90deg);
+             border-left: 10px solid var(--color2);
+             border-top: 5px solid transparent;
+             border-bottom: 5px solid transparent;
+         }
+         
+         .triangle {
+             width: 0px;
+             height: 0px;
+             margin: auto;
+             transform: rotate(90deg);
+             border-left: 10px solid var(--color2);
+             border-top: 5px solid transparent;
+             border-bottom: 5px solid transparent;
          }
          
          .btn-5 {
@@ -273,6 +361,47 @@
          
          .element {
              margin: 20px 20px;
+         }
+         
+         .column {
+             flex-direction: column;
+         }
+         
+         .center {
+             justify-content: center;
+             align-items: center;
+         }
+         
+         .tc {
+             padding: 20px;
+             background: var(--color6);
+             border-radius: 10px;
+             transition: 0.3s;
+             position: relative;
+             cursor: pointer;
+             min-height: 200px;
+             top: 0px;
+         }
+         
+         .tc:hover {
+             top: -5px;
+             transition: top 0.3s;
+         }
+         
+         .tc:hover::after {
+             content: "Quiero saber más";
+             position: absolute;
+             background: rgb(255, 255, 255);
+             padding: 5px;
+             width: auto;
+             transition: 0.3s;
+             transform: scale(1.4);
+             border-radius: 5px;
+             box-shadow: 0px 0px 10px rgb(83, 83, 83);
+             font-size: 16px;
+             animation: up 0.6s;
+             margin: auto;
+             color: #000;
          }
          
          .skills {
@@ -652,3 +781,13 @@
                  opacity: 0;
              }
          }
+         
+         @keyframes up {
+             from {
+                 opacity: 0;
+             }
+             to {
+                 opacity: 1;
+             }
+         }
+        
