--- a/assets/mathApp/style.css
+++ b/assets/mathApp/style.css
@@ -25,16 +25,26 @@
    #on{
      min-width: inherit;
      max-width: auto;
+     min-width: 50px; 
+     max-width: 150px; 
+     margin:0; 
+     position: relative; 
+     top: -10px
     } 
    .content-input{
      margin: 50px auto;
      width: 300px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     align-content: center;
+     flex-direction: column;
    }
    .ope{
      display: flex;
      height: auto;
      width: auto;
-     justify-content: center;
+     justify-content: space-evenly;;
      font-size: 70px;
      color: #222d6d;
      margin: 30px auto;
@@ -59,7 +69,22 @@
    #t{
      border:  5px solid #3DADFF;
      border-radius: 5px;
+     transform: scale(1.3)
    }
+   .btn-1 {
+    padding: 10px;
+    border: none;
+    border: 3px solid #289dd2;
+    border-radius: 2px;
+    background: #289dd2;
+    color: rgb(255, 255, 255);
+    margin: 20px;
+    font-size: 20px;
+    transition: 0.3s;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
    @keyframes re{
      25%{right: 0px}
      50%{right:-20px}
