--- a/assets/mathApp/style.css
+++ b/assets/mathApp/style.css
@@ -172,7 +172,7 @@
       align-content: center;
       align-items: center;
     }
-    .sub-bo{
+    .sub-box{
       width: 90% !important;
     }        
 }
