--- a/assets/mathApp/style.css
+++ b/assets/mathApp/style.css
@@ -71,9 +71,11 @@
     @keyframes aparecer{
       from{
         opacity: 0;
+        transform: scale(1.5);
       }
       to{
         opacity: 1;
+        transform: scale(1);
       }
     }
     @keyframes desaparecer{
