--- a/assets/mathApp/style.css
+++ b/assets/mathApp/style.css
@@ -87,14 +87,17 @@
       }
     }
     @keyframes desaparecer2{
-      10%{
+      0%{
+        opacity: 1;
+        z-index: 1000;
+      }
+      80%{
         opacity: 1;
         z-index: 1000;
       }
       100%{
         opacity: 0;
         z-index: 0;
-        top: -100%;
       }
     }
    .content-input{
@@ -136,23 +139,47 @@
     }
    #in{
     caret-color: #289dd2;
+   }
+   #label_input{
+    width: 100%;
+    height: 96px;
+    position: absolute;
+    cursor: text;
    }  
-   .content-input:hover::before{
-    content: "Enter para ingresar la respuesta.";
-    width: auto;
-    height: 30px;
-    background: rgb(255, 247, 153);
-    padding: 5px;
-    box-shadow: 0px 0px 10px rgb(210, 210, 210);
+   #label_input:hover::before {
+    content: "Recuerda: Enter(←) ó punto(.) para ingresar la respuesta.";
+    width: fit-content;
+    height: fit-content;
+    color: #3DADFF;
+    font-weight: bold;
+    background: rgb(255, 255, 255);
+    padding: 7px;
+    box-shadow: 0px 2px 10px rgb(174, 174, 174);
     border-radius: 2px;
     display: flex;
     align-items: center;
-    position: fixed;
-    bottom: 40%;
-    animation: desaparecer2 6s;
+    position: relative;
+    bottom: 50%;
+    animation: desaparecer2 4s;
     opacity: 0;
-    z-index: 0;
-    
+    z-index: 0; 
+    justify-content: center;
+    margin: auto;
+   }
+   #label_input:hover::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-right: 7px solid transparent;
+    border-top: 10px solid rgb(255, 255, 255);
+    border-left: 7px solid transparent;
+    position: relative;
+    bottom: 50%;
+    animation: desaparecer2 4s;
+    opacity: 0;
+    z-index: 0; 
+    margin: auto;
+    display: block;
    }
    /*.content-input:hover div::before{
     content: "";
