--- a/assets/mathApp/style.css
+++ b/assets/mathApp/style.css
@@ -147,10 +147,10 @@
     cursor: text;
    }  
    #label_input:hover::before {
-    content: "Recuerda: Enter(←) ó punto(.) para ingresar la respuesta.";
+    content: "Recuerda: Enter(→) ó punto(.) para ingresar la respuesta.";
     width: fit-content;
     height: fit-content;
-    color: #3DADFF;
+    color: hsl(0, 0%, 45%);
     font-weight: bold;
     background: rgb(255, 255, 255);
     padding: 7px;
