--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,16 @@
                  box-shadow: -1px 1px 20px 0px black;
                  border-top: 32px solid black;
               }
-
+              .a-normal{
+                text-decoration: none;
+                color: #fff;
+              }
+              .flex-column{
+                flex-direction: column;
+              }
+              .net:hover{
+                filter: brightness(0.5);
+              }
               .cam{
                 width: 18px;
                 height: 18px;
@@ -246,7 +255,7 @@
                  margin: 88px 0px 0px 0px;
                  /*border-bottom: 1px solid var(--color1);*/
                  color: white;
-                 height: 500px;
+                 height: 580px;
                  text-shadow: 0px 0px 10px #000;
                  background: url("../assets/fon-p-l.png");
                  background-attachment: fixed;
