--- a/css/index.css
+++ b/css/index.css
@@ -261,6 +261,7 @@
                  background-attachment: fixed;
                  background-repeat: no-repeat;
                  background-size: cover;
+                 transform: translate3d(0px,0px,0px);
              }
              
              #name {
