--- a/assets/delcaribe/css/index.css
+++ b/assets/delcaribe/css/index.css
@@ -11,6 +11,31 @@
 button{
     cursor: pointer;
 }
+.loader{
+    position: relative;
+    animation: parpadear infinite 1.5s alternate;
+}
+@keyframes parpadear {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+.cloader{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    z-index: 12;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -40,7 +65,7 @@ h1,h2,h3{
     width: 100%;
     padding: 5px;
 }
-#ent{
+#ent,#plf,#pos,#beb{
     width: 100%;
 }
 .tar{
