--- a/assets/delcaribe/css/media-query.css
+++ b/assets/delcaribe/css/media-query.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 650px){
-    #ent{
+    #type0,#type1,#type2,#type3{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
